[gd_scene load_steps=8 format=3 uid="uid://bu1br7g5v4co7"]

[ext_resource type="Theme" uid="uid://c521sxmdt64pl" path="res://addons/UDSEngine/Database_Manager/Theme and Style/main_30.tres" id="1_sv5gt"]
[ext_resource type="Script" path="res://addons/UDSEngine/Event_Manager/Command_List_Forms/GlobalVariables_EventInputForm.gd" id="2_yt462"]
[ext_resource type="PackedScene" uid="uid://blyuurjsfw16s" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/ItemType_Selection.tscn" id="3_peys3"]
[ext_resource type="PackedScene" uid="uid://cjrcdqw6fj18s" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Checkbox_Template.tscn" id="4_g0mxl"]
[ext_resource type="PackedScene" uid="uid://b2dogu4xneier" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Text.tscn" id="5_accm6"]
[ext_resource type="PackedScene" uid="uid://b4i04twjpw3iu" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Number_Counter_Float.tscn" id="6_iqe52"]
[ext_resource type="PackedScene" uid="uid://bop4ol1uh1lbf" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Number_Counter.tscn" id="7_xwv06"]

[node name="GlobalVariables_EventInputForm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sv5gt")
script = ExtResource("2_yt462")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.5
offset_top = -132.5
offset_right = 197.5
offset_bottom = 132.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Global Variable Changes"
horizontal_alignment = 1

[node name="KeyDropdown" parent="Control/VBoxContainer" instance=ExtResource("3_peys3")]
layout_mode = 2
selection_table_name = "Global Variables"
label_text = "Global Variable"
is_label_button = false

[node name="Label" parent="Control/VBoxContainer/KeyDropdown" index="0"]
layout_mode = 2

[node name="HBox1" parent="Control/VBoxContainer/KeyDropdown/Label" index="0"]
layout_mode = 2

[node name="Label_Button" parent="Control/VBoxContainer/KeyDropdown/Label/HBox1" index="0"]
layout_mode = 2
text = "Global Variable"

[node name="Hide_Button" parent="Control/VBoxContainer/KeyDropdown/Label/HBox1" index="1"]
layout_mode = 2

[node name="Input" parent="Control/VBoxContainer/KeyDropdown" index="1"]
layout_mode = 2

[node name="input_templateBuffer" parent="Control/VBoxContainer/KeyDropdown" index="2"]
layout_mode = 2

[node name="TypeDropdown" parent="Control/VBoxContainer" instance=ExtResource("3_peys3")]
layout_mode = 2
label_text = "Variable Key"
is_label_button = false

[node name="Label" parent="Control/VBoxContainer/TypeDropdown" index="0"]
layout_mode = 2

[node name="HBox1" parent="Control/VBoxContainer/TypeDropdown/Label" index="0"]
layout_mode = 2

[node name="Label_Button" parent="Control/VBoxContainer/TypeDropdown/Label/HBox1" index="0"]
layout_mode = 2
text = "Variable Key"

[node name="Hide_Button" parent="Control/VBoxContainer/TypeDropdown/Label/HBox1" index="1"]
layout_mode = 2

[node name="Input" parent="Control/VBoxContainer/TypeDropdown" index="1"]
layout_mode = 2

[node name="input_templateBuffer" parent="Control/VBoxContainer/TypeDropdown" index="2"]
layout_mode = 2

[node name="InputContainer" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="True or False" parent="Control/VBoxContainer/InputContainer" instance=ExtResource("4_g0mxl")]
layout_mode = 2
size_flags_vertical = 3
is_label_button = false

[node name="Text" parent="Control/VBoxContainer/InputContainer" instance=ExtResource("5_accm6")]
visible = false
layout_mode = 2
is_label_button = false

[node name="Display Name" parent="Control/VBoxContainer/InputContainer" instance=ExtResource("5_accm6")]
visible = false
layout_mode = 2

[node name="Decimal Number" parent="Control/VBoxContainer/InputContainer" instance=ExtResource("6_iqe52")]
visible = false
layout_mode = 2

[node name="Whole Number" parent="Control/VBoxContainer/InputContainer" instance=ExtResource("7_xwv06")]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Accept" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Accept"

[node name="Cancel" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cancel"

[connection signal="button_up" from="Control/VBoxContainer/HBoxContainer/Accept" to="." method="_on_accept_button_up"]
[connection signal="button_up" from="Control/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_button_up"]

[editable path="Control/VBoxContainer/KeyDropdown"]
[editable path="Control/VBoxContainer/KeyDropdown/Label"]
[editable path="Control/VBoxContainer/TypeDropdown"]
[editable path="Control/VBoxContainer/TypeDropdown/Label"]
